cmake_minimum_required(VERSION 3.17)
project(Algorithm_Questions)

set(CMAKE_CXX_STANDARD 14)

# nowcoder
add_executable(NC0078
        0-nowcoder/NC0078/main.cpp)

# leetcode
add_executable(0001-two-sum1
        0001-two-sum/main.cpp)

add_executable(0001-two-sum2
        0001-two-sum/main2.cpp)

add_executable(0002-add-two-numbers1
        0002-add-two-numbers/main.cpp)

add_executable(0002-add-two-numbers2
        0002-add-two-numbers/main2.cpp)

add_executable(0003-longest-substring-without-repeating-characters
        0003-longest-substring-without-repeating-characters/main.cpp)

add_executable(0004-median-of-two-sorted-arrays
        0004-median-of-two-sorted-arrays/main.cpp)

add_executable(0005-longest-palindromic-substring
        0005-longest-palindromic-substring/main.cpp)

add_executable(0006-zigzag-conversion
        0006-zigzag-conversion/main.cpp)

add_executable(0007-reverse-integer
        0007-reverse-integer/main.cpp)

add_executable(0007-reverse-integer2
        0007-reverse-integer/main2.cpp)

add_executable(0008-string-to-integer-atoi
        0008-string-to-integer-atoi/main.cpp)

add_executable(0009-palindrome-number
        0009-palindrome-number/main.cpp)

add_executable(0010-regular-expression-matching
        0010-regular-expression-matching/main.cpp)

add_executable(0011-container-with-most-water
        0011-container-with-most-water/main.cpp)

add_executable(0011-container-with-most-water2
        0011-container-with-most-water/main2.cpp)

add_executable(0012-integer-to-roman
        0012-integer-to-roman/main.cpp)

add_executable(0013-roman-to-integer
        0013-roman-to-integer/main.cpp)

add_executable(0014-longest-common-prefix
        0014-longest-common-prefix/main.cpp)