cmake_minimum_required(VERSION 3.17)
project(Algorithm_Questions)

set(CMAKE_CXX_STANDARD 14)

# nowcoder
add_executable(NC0078 0-nowcoder/NC0078/main.cpp)

add_executable(NC0119 0-nowcoder/NC0119/main.cpp)

add_executable(NC0045 0-nowcoder/NC0045/main.cpp)

add_executable(NC0061 0-nowcoder/NC0061/main.cpp)

add_executable(NC0088 0-nowcoder/NC0088/main.cpp)
add_executable(NC00882 0-nowcoder/NC0088/main2.cpp)

add_executable(NC0112 0-nowcoder/NC0112/main.cpp)
add_executable(NC0105 0-nowcoder/NC0105/main.cpp)

# leetcode
add_executable(0001-two-sum1 0001-two-sum/main.cpp)
add_executable(0001-two-sum2 0001-two-sum/main2.cpp)

add_executable(0002-add-two-numbers1 0002-add-two-numbers/main.cpp)
add_executable(0002-add-two-numbers2 0002-add-two-numbers/main2.cpp)

add_executable(0003-longest-substring-without-repeating-characters 0003-longest-substring-without-repeating-characters/main.cpp)

add_executable(0004-median-of-two-sorted-arrays 0004-median-of-two-sorted-arrays/main.cpp)

add_executable(0005-longest-palindromic-substring 0005-longest-palindromic-substring/main.cpp)

add_executable(0006-zigzag-conversion 0006-zigzag-conversion/main.cpp)

add_executable(0007-reverse-integer 0007-reverse-integer/main.cpp)
add_executable(0007-reverse-integer2 0007-reverse-integer/main2.cpp)

add_executable(0008-string-to-integer-atoi 0008-string-to-integer-atoi/main.cpp)

add_executable(0009-palindrome-number 0009-palindrome-number/main.cpp)

add_executable(0010-regular-expression-matching 0010-regular-expression-matching/main.cpp)

add_executable(0011-container-with-most-water 0011-container-with-most-water/main.cpp)
add_executable(0011-container-with-most-water2 0011-container-with-most-water/main2.cpp)

add_executable(0012-integer-to-roman 0012-integer-to-roman/main.cpp)

add_executable(0013-roman-to-integer 0013-roman-to-integer/main.cpp)

add_executable(0014-longest-common-prefix 0014-longest-common-prefix/main.cpp)

add_executable(0015-3sum 0015-3sum/main.cpp)
add_executable(0015-3sum2 0015-3sum/main2.cpp)

add_executable(0016-3sum-closest 0016-3sum-closest/main.cpp)
add_executable(0016-3sum-closest2 0016-3sum-closest/main2.cpp)

add_executable(0017-letter-combinations-of-a-phone-number 0017-letter-combinations-of-a-phone-number/main.cpp)

add_executable(0018-4sum 0018-4sum/main.cpp)

add_executable(0019-remove-nth-node-from-end-of-list 0019-remove-nth-node-from-end-of-list/main.cpp)
add_executable(0019-remove-nth-node-from-end-of-list2 0019-remove-nth-node-from-end-of-list/main2.cpp)