cmake_minimum_required(VERSION 3.17)
project(Algorithm_Questions)

set(CMAKE_CXX_STANDARD 14)

# nowcoder
add_executable(NC0078 0-nowcoder/NC0078/main.cpp)
add_executable(NC0119 0-nowcoder/NC0119/main.cpp)
add_executable(NC0045 0-nowcoder/NC0045/main.cpp)
add_executable(NC0061 0-nowcoder/NC0061/main.cpp)
add_executable(NC0088 0-nowcoder/NC0088/main.cpp)
add_executable(NC00882 0-nowcoder/NC0088/main2.cpp)
add_executable(NC0112 0-nowcoder/NC0112/main.cpp)
add_executable(NC0105 0-nowcoder/NC0105/main.cpp)
add_executable(NC0022 0-nowcoder/NC0022/main.cpp)
add_executable(NC0072 0-nowcoder/NC0072/main.cpp)
add_executable(NC0068 0-nowcoder/NC0068/main.cpp)
add_executable(NC0012 0-nowcoder/NC0012/main.cpp)
add_executable(NC0050 0-nowcoder/NC0050/main.cpp)
add_executable(NC0004 0-nowcoder/NC0004/main.cpp)
add_executable(NC0016 0-nowcoder/NC0016/main.cpp)
add_executable(NC0093 0-nowcoder/NC0093/main.cpp)

# leetcode
add_executable(0001-two-sum1 1-leetcode/0001-two-sum/main.cpp 2-ctyun/0001-ugly-number/main.cpp)
add_executable(0001-two-sum2 1-leetcode/0001-two-sum/main2.cpp)
add_executable(0002-add-two-numbers1 1-leetcode/0002-add-two-numbers/main.cpp)
add_executable(0002-add-two-numbers2 1-leetcode/0002-add-two-numbers/main2.cpp)
add_executable(0003-longest-substring-without-repeating-characters 1-leetcode/0003-longest-substring-without-repeating-characters/main.cpp)
add_executable(0004-median-of-two-sorted-arrays 1-leetcode/0004-median-of-two-sorted-arrays/main.cpp)
add_executable(0005-longest-palindromic-substring 1-leetcode/0005-longest-palindromic-substring/main.cpp)
add_executable(0006-zigzag-conversion 1-leetcode/0006-zigzag-conversion/main.cpp)
add_executable(0007-reverse-integer 1-leetcode/0007-reverse-integer/main.cpp)
add_executable(0007-reverse-integer2 1-leetcode/0007-reverse-integer/main2.cpp)
add_executable(0008-string-to-integer-atoi 1-leetcode/0008-string-to-integer-atoi/main.cpp)
add_executable(0009-palindrome-number 1-leetcode/0009-palindrome-number/main.cpp)
add_executable(0010-regular-expression-matching 1-leetcode/0010-regular-expression-matching/main.cpp)
add_executable(0011-container-with-most-water 1-leetcode/0011-container-with-most-water/main.cpp)
add_executable(0011-container-with-most-water2 1-leetcode/0011-container-with-most-water/main2.cpp)
add_executable(0012-integer-to-roman 1-leetcode/0012-integer-to-roman/main.cpp)
add_executable(0013-roman-to-integer 1-leetcode/0013-roman-to-integer/main.cpp)
add_executable(0014-longest-common-prefix 1-leetcode/0014-longest-common-prefix/main.cpp)
add_executable(0015-3sum 1-leetcode/0015-3sum/main.cpp)
add_executable(0015-3sum2 1-leetcode/0015-3sum/main2.cpp)
add_executable(0016-3sum-closest 1-leetcode/0016-3sum-closest/main.cpp)
add_executable(0016-3sum-closest2 1-leetcode/0016-3sum-closest/main2.cpp)
add_executable(0017-letter-combinations-of-a-phone-number 1-leetcode/0017-letter-combinations-of-a-phone-number/main.cpp)
add_executable(0018-4sum 1-leetcode/0018-4sum/main.cpp)
add_executable(0019-remove-nth-node-from-end-of-list 1-leetcode/0019-remove-nth-node-from-end-of-list/main.cpp)
add_executable(0019-remove-nth-node-from-end-of-list2 1-leetcode/0019-remove-nth-node-from-end-of-list/main2.cpp)
add_executable(0020-valid-parentheses 1-leetcode/0020-valid-parentheses/main.cpp)
add_executable(0021-merge-two-sorted-lists 1-leetcode/0021-merge-two-sorted-lists/main.cpp)
add_executable(0021-merge-two-sorted-lists2 1-leetcode/0021-merge-two-sorted-lists/main2.cpp)
add_executable(0022-generate-parentheses 1-leetcode/0022-generate-parentheses/main.cpp)
add_executable(0023-merge-k-sorted-lists 1-leetcode/0023-merge-k-sorted-lists/main.cpp)
add_executable(0024-swap-nodes-in-pairs 1-leetcode/0024-swap-nodes-in-pairs/main.cpp)
add_executable(0025-reverse-nodes-in-k-group 1-leetcode/0025-reverse-nodes-in-k-group/main.cpp)
add_executable(0026-remove-duplicates-from-sorted-array 1-leetcode/0026-remove-duplicates-from-sorted-array/main.cpp)
add_executable(0026-remove-duplicates-from-sorted-array2 1-leetcode/0026-remove-duplicates-from-sorted-array/main2.cpp)
add_executable(0027-remove-element 1-leetcode/0027-remove-element/main.cpp)
add_executable(0027-remove-element2 1-leetcode/0027-remove-element/main2.cpp)
add_executable(0028-implement-strstr 1-leetcode/0028-implement-strstr/main.cpp)
add_executable(0029-divide-two-integers 1-leetcode/0029-divide-two-integers/main.cpp)
add_executable(0029-divide-two-integers2 1-leetcode/0029-divide-two-integers/main2.cpp)


# 天翼云
add_executable(0004-remove-k-digits 2-ctyun/0004-remove-k-digits/main.cpp)
add_executable(0006-BM4 2-ctyun/0006-BM4/main.cpp)